--- a/app/static/css/help.css
+++ b/app/static/css/help.css
@@ -3,7 +3,6 @@
     justify-content: center;
     align-items: center;
     justify-content: flex-end;
-    color: white;
     width: auto;
     height: 80vh;
     background-repeat: no-repeat;
@@ -13,12 +12,15 @@
     border-radius: 20px;
 }
 
-body.dark-mode .background{
-    background: black;
+body.dark-mode {
+    background-color: #1e1e1e;
     color: white;
 }
 
-
+body.dark-mode .background {
+    background-color: #1e1e1e;
+    color: white;
+}
 
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400i,700");
 
@@ -27,15 +29,11 @@ body.dark-mode .background{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-
-
 }
-
-
 
 .wrapper {
   width: 60%;
-    margin: 0 auto; /* horizontaal centreren */
+  margin: 0 auto;
 }
 
 h1 {
@@ -50,9 +48,10 @@ h1 {
   margin: 20px 0;
 }
 
-body.dark-mode .container{
-    background: #212121;
-    color: white;
+body.dark-mode .container {
+  background-color: #2a2a2a;
+  color: white;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .question {
@@ -63,6 +62,7 @@ body.dark-mode .container{
   display: flex;
   align-items: center;
   cursor: pointer;
+  color: black;
 }
 
 .question::after {
@@ -71,6 +71,7 @@ body.dark-mode .container{
   position: absolute;
   right: 20px;
   transition: 0.2s;
+  color: black;
 }
 
 .question.active::after {
@@ -88,16 +89,33 @@ body.dark-mode .container{
   line-height: 1.5rem;
 }
 
-.question.active + .answercont {
+/* Dark mode text altijd wit houden */
+body.dark-mode .question,
+body.dark-mode .question:hover,
+body.dark-mode .question.active {
+  color: white;
 }
 
-@media screen and (max-width: 790px){
+/* Ook het plusje wit maken */
+body.dark-mode .question::after,
+body.dark-mode .question.active::after {
+  color: white;
+}
+
+/* Linkjes donkerroze vervangen door wit of ander accent indien gewenst */
+body.dark-mode a {
+  color: white;
+}
+
+body.dark-mode a:hover {
+  text-decoration: underline;
+}
+
+@media screen and (max-width: 790px) {
   html {
     font-size: 14px;
   }
   .wrapper {
-  width: 80%;
+    width: 80%;
+  }
 }
-}
-
-
