--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
     <a href="/tarieven">Tarieven</a>
     <a href="maps">Vind een fiets</a>
     <a href="help">Help</a>
-    <a href="/#footer">Contact</a>
+    <a href="/contact">Contact</a>
     <div class="dropdown">
       <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown">Meer ▼</a>
       <div class="dropdown-menu">
